@@ -344,7 +344,7 @@ public class PrioritySLAService {
                 }
             }
         }
-        String currentState = processInstances.getLast().getState().getState();
+        String currentState = processInstances.get(processInstances.size() - 1).getState().getState();
         if (currentState.equals(PENDING_FOR_ASSIGNMENT)) {
             remainingTotalSla += getDurationFromMap(slaMap, tenantId, businessService, PENDING_RESOLUTION).toMillis();
         } else if (currentState.startsWith(PENDING_ASSIGNMENT_PREFIX)) {
